fix: no time to write a commit message

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Standard Morse Code Translator</title>
 </head>
-<body> 
-   <!-- <button class="theme">button</button> -->
-    <div id="header"><h></h></div>
+
+<body>
+    <!-- <button class="theme">button</button> -->
+    <div id="header">
+        <h></h>
+    </div>
     <div class="mode">
         <div class="checkbox-group">
             <input type="checkbox" id="mt" class="sel">
@@ -26,14 +30,15 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="input">
+            <textarea id="inputbox" placeholder="input here"></textarea>
 
-    <div class="input">
-        <textarea  id="inputbox" placeholder="input here"></textarea>
+        </div>
 
-    </div>
-    
-    <div class="output">
-        <textarea readonly id="outputbox" placeholder="output here"></textarea>
+        <div class="output">
+            <textarea readonly id="outputbox" placeholder="output here"></textarea>
+        </div>
     </div>
     <div class="copyright">
         <p>&copy; 2023 Hikari_Zasureiya. All rights reserved.</p>
@@ -42,4 +47,5 @@
 
 
 </body>
+
 </html>
