--- a/index.html
+++ b/index.html
@@ -1,4 +1,53 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body> 
+   <!-- <button class="theme">button</button> -->
+
+    <div class="body1">
+        <div id="header">
+            <h></h>
+            </div>
+        <div class="mode">
+            <div class="checkbox-group">
+                <input type="checkbox" id="mt" class="sel">
+                <div class="text">
+                    <h5>morsecode to text</h5>
+                </div>
+            </div>
+            <div class="checkbox-group">
+                <input type="checkbox" id="tm" class="sel">
+                <div class="text">
+                    <h5>text to morsecode</h5>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="input">
+                <textarea  id="inputbox" placeholder="input here"></textarea>
+            </div>
+    
+            <div class="output">
+                <textarea readonly id="outputbox" placeholder="output here"></textarea>
+            </div>
+        </div>
+    <!--button class="copy">&#128203;</button>-->
+    </div>
+    <div class="copyright">
+        <p>&copy; 2023 Hikari_Zasureiya. All rights reserved.</p>
+    </div>
+    <script src="script.js"></script>
+
+</body>
+</html>
 <html lang="en">
 
 <head>
